--- a/ProjectManagement/ProjectManagement.csproj
+++ b/ProjectManagement/ProjectManagement.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="ClosedXML.Extensions.Mvc" Version="0.5.0" />
+    <PackageReference Include="MagnusMinds.Utility" Version="8.0.12" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
